--- a/index.html
+++ b/index.html
@@ -18,11 +18,34 @@
     </div>
     <div class="timer-container">
       <div class="timer-content">
-        <h2 id="timer">25:00</h2>
+        <h2 id="timer">00:00</h2>
         <button id="playPause">PLAY</button>
       </div>
     </div>
     <button id="config"><img src="gear.png"></button>
   </div>
+  <div class="settings-modal hidden">
+    <div class="header">
+      <h2>Settings</h2>
+      <button id="closeBtn">x</button>
+    </div>
+    <h4>Time (minutes)</h4>
+    <form>
+      <div class="input-container">
+        <label>pomodoro</label>
+        <input id="pomodoroInput" min="1" value="25" type="number">
+      </div>
+      <div class="input-container">
+        <label>short break</label>
+        <input id="shortBreakInput" min="1" value="5" type="number">
+      </div>
+      <div class="input-container">
+        <label>long break</label>
+        <input id="longBreakInput" min="1" value="15" type="number">
+      </div>
+    </form>
+    <button id="apply">Apply</button>
+  </div>
+  <div class="overlay hidden"></div>
 </body>
 </html>
